--- a/static/styles.css
+++ b/static/styles.css
@@ -40,3 +40,8 @@
   margin: 0 auto 50px;
   font-size: 16px;
 }
+
+.black-link {
+  color: black !important;
+  text-decoration: underline !important;
+}
