Improve css styles

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@
   border-style: solid;
   border-color: black;
   border-image: initial;
-  padding: 4px 10px;
+  padding: 2px 10px;
   border-radius: 20px;
   margin: 2px;
 }
@@ -44,4 +44,24 @@
 .black-link {
   color: black !important;
   text-decoration: underline !important;
+}
+
+.row-with-icon {
+  display: flex;
+  padding: 3px 0;
+}
+
+.row-with-icon__icon {
+  padding-right: 10px;
+}
+
+.row-with-icon__info {
+}
+.row-with-icon__comment {
+  color: gray;
+  font-size: 14px;
+}
+
+.symbol-icon {
+  font-size: 20px;
 }
